@startuml

package "labo4.sort" {

    abstract class AlgorithmeTrieur {
        + {final} trier()
        + {abstract} getNom() : String
        # {abstract} doTrier()
    }

    interface ObservateurEtape {
        + surEtape()
    }

    class mergeSort
    class quickSort

    mergeSort -up-|> AlgorithmeTrieur
    quickSort -up-|> AlgorithmeTrieur
}

package "labo4.model" {
    enum VitesseSimulation {
    LENTE
    NORMALE
    RAPIDE
}
    class ParametresTri
    ParametresTri --> VitesseSimulation
}

package "labo4.util" {
    class AnalyseurNombres
}

package "labo4.vue" {
    class VueVisualiseur
    class ControleurParametres
    class ControleurPrincipal
    class FenetreParametres
    class FenetrePrincipale

    FenetreParametres ..> ControleurParametres
    FenetrePrincipale ..> ControleurPrincipal
}

package "labo4.controleur" {
    class ControleurSimulation
    ControleurSimulation ..|> ObservateurEtape
}

package "labo4" {
    class Main
}

ControleurPrincipal --> ControleurSimulation
ControleurSimulation --> ParametresTri
ControleurSimulation --> VueVisualiseur
ParametresTri --> AlgorithmeTrieur
Main ..> FenetrePrincipale

@enduml